welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:11: error: not found: value Baggle
if (Baggle >= 3) {
    ^Poucet:21: error: not found: value Baggle
} else if (Baggle <= 2) {
           ^